--- a/2203/lecture1/lecture1.ipynb
+++ b/2203/lecture1/lecture1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -142,14 +142,14 @@
        "4      0.0  0.0   NaN     2  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "from copy import deepcopy\n",
     "# Read csv file \n",
     "df = pd.read_csv(\"mtcars.csv\", delimiter=\",\")\n",
     "\n",
@@ -438,6 +438,100 @@
    "source": [
     "# Check missing the ratio \n",
     "df.isnull().mean() * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_colums = list(df.columns[df.isna().any()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\RJNGh\\AppData\\Local\\Temp\\ipykernel_4596\\1373681891.py:7: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  mean_fill_df[col].fillna(value=df[col].mean(),inplace=True)\n",
+      "C:\\Users\\RJNGh\\AppData\\Local\\Temp\\ipykernel_4596\\1373681891.py:11: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  mode_fill_df[col].fillna(value=df[col].mode(),inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean_fill_df = deepcopy(df)\n",
+    "mode_fill_df = deepcopy(df)\n",
+    "\n",
+    "\n",
+    "# Relace with mean \n",
+    "for col in missing_colums:\n",
+    "    mean_fill_df[col].fillna(value=df[col].mean(),inplace=True)\n",
+    "\n",
+    "# Replae with mode\n",
+    "for col in missing_colums:\n",
+    "    mode_fill_df[col].fillna(value=df[col].mode(),inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0        int64\n",
+       "vichle_names     object\n",
+       "mpg             float64\n",
+       "cyl               int64\n",
+       "disp            float64\n",
+       "hp              float64\n",
+       "drat            float64\n",
+       "wt              float64\n",
+       "qsec            float64\n",
+       "v_Shape         float64\n",
+       "am              float64\n",
+       "gear            float64\n",
+       "carb              int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get datatypes\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerical_cols = list(df._get_numeric_data().columns)\n",
+    "\n",
+    "categorical_columns = set(df.columns) - set(numerical_cols)"
    ]
   },
   {
