add basic files

--- a/2203/lecture1/lecture1.ipynb
+++ b/2203/lecture1/lecture1.ipynb
@@ -525,13 +525,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get all the numerical columns\n",
     "numerical_cols = list(df._get_numeric_data().columns)\n",
     "\n",
-    "categorical_columns = set(df.columns) - set(numerical_cols)"
+    "# get all the categorical columns\n",
+    "categorical_columns = set(df.columns) - set(numerical_cols)\n",
+    "\n",
+    "# check we extracted all the columns\n",
+    "assert len(numerical_cols) + len(categorical_columns) == len(list(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>SRN</th>\n",
+       "      <th>GPA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rajan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ghimire</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sudip</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arjan</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name  SRN  GPA\n",
+       "0    Rajan    1  1.0\n",
+       "1  Ghimire    2  2.0\n",
+       "2    Sudip    3  3.9\n",
+       "3    Arjan    4  3.9"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dict = {\n",
+    "    \"Name\" : [\"Rajan\",\"Ghimire\",\"Sudip\",\"Arjan\"],\n",
+    "    \"SRN\" : [1,2,3,4],\n",
+    "    \"GPA\" : [1.0,2.0,3.9,3.9]\n",
+    "}\n",
+    "# create dataframe obj from dict\n",
+    "df_custom = pd.DataFrame(data_dict)\n",
+    "\n",
+    "# print the new dataframe head \n",
+    "df_custom.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([0], dtype='int64')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the index of my name \n",
+    "df_custom.loc[df_custom.Name == \"Rajan\"].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remanme index \n",
+    "df_custom.index.name = \"my_index\""
    ]
   },
   {
