--- a/2203/lecture1/lecture1.ipynb
+++ b/2203/lecture1/lecture1.ipynb
@@ -655,12 +655,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>SRN</th>\n",
+       "      <th>GPA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>my_index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rajan</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ghimire</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sudip</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arjan</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Name  SRN  GPA\n",
+       "my_index                   \n",
+       "0           Rajan    1  1.0\n",
+       "1         Ghimire    2  2.0\n",
+       "2           Sudip    3  3.9\n",
+       "3           Arjan    4  3.9"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remanme index \n",
+    "df_custom.index.name = \"my_index\"\n",
+    "\n",
+    "# print df head \n",
+    "df_custom.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remanme index \n",
-    "df_custom.index.name = \"my_index\""
+    "df.to_csv(\"test_csv.csv\")"
    ]
   },
   {
