--- a/2203/lecture1/lecture1.ipynb
+++ b/2203/lecture1/lecture1.ipynb
@@ -743,11 +743,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"test_csv.csv\")"
+    "df_custom.to_csv(\"1.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_custom.to_json(\"1.json\")"
    ]
   },
   {
@@ -755,7 +764,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# generate random data"
+   ]
   }
  ],
  "metadata": {
