--- a/2203/lecture1/lecture1.ipynb
+++ b/2203/lecture1/lecture1.ipynb
@@ -761,11 +761,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate random data\n",
+    "from sklearn.datasets import make_regression\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate random data"
+    "features, target, coff = make_regression(\n",
+    "    n_samples= 100,\n",
+    "    n_features=3,\n",
+    "    n_informative=3,\n",
+    "    n_targets=1,\n",
+    "    noise=0.0,\n",
+    ")"
    ]
   }
  ],
