--- a/2203/weekly_assignments/week2.ipynb
+++ b/2203/weekly_assignments/week2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,47 +77,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "def check_missing(x : list):\n",
     "\n",
-    "    # iterate over the list \n",
-    "    # if contains 0, iterate from 0 else iterate from 1\n",
+    "    # sort the input list\n",
     "    x = sorted(x)\n",
+    "    # start iterating from the first number of the list and if missing, return it\n",
     "    for i , x in enumerate(x,start=x[0]):\n",
+    "        # if counter != Number, return it\n",
     "        if i != x:\n",
-    "            return i"
+    "            # return the number\n",
+    "            return i\n",
+    "\n",
+    "# define the input list     \n",
+    "input_list = [1,2,3,4,5,6,8,0]\n",
+    "\n",
+    "# call the method\n",
+    "print(check_missing(input_list))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**C- Write a Python program to find the single number in a list that doesn't occur twice.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_list = [1,2,3,4,6,7,8,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "[5, 2]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_missing(input_list)"
+    "def get_non_repeting( input_list : list):\n",
+    "\n",
+    "    # create a dicitonary to create the mapping\n",
+    "    mapp = {}\n",
+    "\n",
+    "    # iterate throght the list\n",
+    "    for item in input_list:\n",
+    "\n",
+    "        # if not present, give list\n",
+    "        mapp[item] = 1 + mapp.get(item,0)\n",
+    "    \n",
+    "    # return the list of non-repeting numbers\n",
+    "    return [k for k,v in mapp.items() if v == 1]\n",
+    "\n",
+    "# call the methods to get the non-repeting numbers\n",
+    "get_non_repeting([5, 3, 4, 3, 4, 4, 4, 4, 4, 3, 2])"
    ]
   },
   {
@@ -144,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
