--- a/2203/lecture2/lecture2.ipynb
+++ b/2203/lecture2/lecture2.ipynb
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x20daf39ace0>"
+       "<sqlite3.Cursor at 0x29fa57d7d50>"
       ]
      },
      "execution_count": 7,
@@ -140,20 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x20daf39ace0>"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = [\n",
     "  (\"Prajwal\",\"Luitel\",23,\"M\",15000000),\n",
@@ -167,27 +156,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('John', 'snow', 'M', None, 50000.0)\n",
-      "('RAJAN', 'GHIMIRE', 'M', '25', 550000.0)\n",
-      "('NAJAR', 'GHIMIRE', 'M', '25', 550000.0)\n",
-      "('Prajwal', 'Luitel', 23, 'M', 15000000.0)\n",
-      "('Sambridhi', 'Luitel', 23, 'F', 15000000.0)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x29fa57d7d50>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# get the entries from the first column\n",
     "cursor.execute(\"SELECT * from EMPLOYEE\")\n",
-    "for x in cursor:\n",
-    "    print(x)"
+    "# for x in cursor:\n",
+    "#     print(x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('John', 'snow', 'M', None, 50000.0)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('RAJAN', 'GHIMIRE', 'M', '25', 550000.0),\n",
+       " ('NAJAR', 'GHIMIRE', 'M', '25', 550000.0),\n",
+       " ('Prajwal', 'Luitel', 23, 'M', 15000000.0),\n",
+       " ('Sambridhi', 'Luitel', 23, 'F', 15000000.0)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
