--- a/2203/lecture2/lecture2.ipynb
+++ b/2203/lecture2/lecture2.ipynb
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x29fa57d7d50>"
+       "<sqlite3.Cursor at 0x25b61ae9c00>"
       ]
      },
      "execution_count": 7,
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x29fa57d7d50>"
+       "<sqlite3.Cursor at 0x25b61ae9c00>"
       ]
      },
      "execution_count": 10,
@@ -221,18 +221,101 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Update**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('John', 'snow', 'M', None, 50000.0)\n",
+      "('RAJAN', 'GHIMIRE', 'M', '25', 550000.0)\n",
+      "('NAJAR', 'GHIMIRE', 'M', '25', 550000.0)\n",
+      "('Prajwal', 'Luitel', 24, 'M', 15000000.0)\n",
+      "('Sambridhi', 'Luitel', 23, 'F', 15000000.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = \"\"\"UPDATE EMPLOYEE SET AGE=AGE+1 WHERE SEX='M'\"\"\"\n",
+    "cursor.execute(sql)\n",
+    "conn.commit()\n",
+    "\n",
+    "\n",
+    "cursor.execute(\"SELECT * from EMPLOYEE\")\n",
+    "for x in cursor:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Extra Questions:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# rename column sex to gender. \n",
+    "cursor.execute('''ALTER TABLE EMPLOYEE RENAME COLUMN SEX TO GENDER''')\n",
+    "conn.commit()\n",
+    "\n",
+    "# rename the whole table \n",
+    "cursor.execute(\"\"\"ALTER TABLE EMPLOYEE RENAME TO Employee_UPDATED\"\"\")\n",
+    "conn.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DELETE DATA**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('John', 'snow', 'M', None, 50000.0),\n",
+       " ('RAJAN', 'GHIMIRE', 'M', '25', 550000.0),\n",
+       " ('NAJAR', 'GHIMIRE', 'M', '25', 550000.0),\n",
+       " ('Prajwal', 'Luitel', 24, 'M', 15000000.0)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# delete record where Sambridhi\n",
+    "delete_query = \"\"\"DELETE FROM Employee_UPDATED WHERE FIRST_NAME = 'Sambridhi'\"\"\"\n",
+    "# execute the cooman\n",
+    "cursor.execute(delete_query)\n",
+    "\n",
+    "conn.commit()\n",
+    "\n",
+    "# select from the table\n",
+    "cursor.execute(\"SELECT * from Employee_UPDATED\")\n",
+    "\n",
+    "cursor.fetchall()\n"
+   ]
   }
  ],
  "metadata": {
