add delete many

--- a/2203/lecture3/practice2.ipynb
+++ b/2203/lecture3/practice2.ipynb
@@ -856,6 +856,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**delete many**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 documents deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_query = {\"address\" : {\"$regex\": \"^Y\"}}\n",
+    "\n",
+    "x = employee.delete_many(my_query)\n",
+    "\n",
+    "print(x.deleted_count, \"documents deleted\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
