--- a/2203/lecture3/practice2.ipynb
+++ b/2203/lecture3/practice2.ipynb
@@ -885,6 +885,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 documents deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = employee.delete_many({})\n",
+    "print(x.deleted_count, \"documents deleted\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
