--- a/3334/Inclass1/analysis.ipynb
+++ b/3334/Inclass1/analysis.ipynb
@@ -570,9 +570,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(   m_dep  Count\n",
+       " 0    0.1    320\n",
+       " 1    0.2    213\n",
+       " 2    0.8    208\n",
+       " 3    0.5    205\n",
+       " 4    0.7    200\n",
+       " 5    0.3    199\n",
+       " 6    0.9    195\n",
+       " 7    0.6    186\n",
+       " 8    0.4    168\n",
+       " 9    1.0    106,\n",
+       "    n_cores  Count\n",
+       " 0        4    274\n",
+       " 1        7    259\n",
+       " 2        8    256\n",
+       " 3        2    247\n",
+       " 4        3    246\n",
+       " 5        5    246\n",
+       " 6        1    242\n",
+       " 7        6    230,\n",
+       "    touch_screen  Count\n",
+       " 0             1   1006\n",
+       " 1             0    994)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate value counts for specified columns\n",
     "m_dep_counts = df['m_dep'].value_counts().reset_index()\n",
@@ -586,6 +619,88 @@
     "\n",
     "m_dep_counts, n_cores_counts, touch_screen_counts"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   m_dep |   Count |\n",
+      "|---:|--------:|--------:|\n",
+      "|  0 |     0.1 |     320 |\n",
+      "|  1 |     0.2 |     213 |\n",
+      "|  2 |     0.8 |     208 |\n",
+      "|  3 |     0.5 |     205 |\n",
+      "|  4 |     0.7 |     200 |\n",
+      "|  5 |     0.3 |     199 |\n",
+      "|  6 |     0.9 |     195 |\n",
+      "|  7 |     0.6 |     186 |\n",
+      "|  8 |     0.4 |     168 |\n",
+      "|  9 |     1   |     106 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tabulate(m_dep_counts, tablefmt=\"pipe\", headers=\"keys\"))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   n_cores |   Count |\n",
+      "|---:|----------:|--------:|\n",
+      "|  0 |         4 |     274 |\n",
+      "|  1 |         7 |     259 |\n",
+      "|  2 |         8 |     256 |\n",
+      "|  3 |         2 |     247 |\n",
+      "|  4 |         3 |     246 |\n",
+      "|  5 |         5 |     246 |\n",
+      "|  6 |         1 |     242 |\n",
+      "|  7 |         6 |     230 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tabulate(n_cores_counts, tablefmt=\"pipe\", headers=\"keys\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    |   touch_screen |   Count |\n",
+      "|---:|---------------:|--------:|\n",
+      "|  0 |              1 |    1006 |\n",
+      "|  1 |              0 |     994 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tabulate(touch_screen_counts, tablefmt=\"pipe\", headers=\"keys\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
