--- a/2304/assignment # 1/modelling.ipynb
+++ b/2304/assignment # 1/modelling.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "df = df.dropna(subset=['description'])\n",
     "\n",
-    "df.drop_duplicates(inplace = True) # Dropping duplicate observations\n",
+    "df.drop_duplicates(inplace = True) \n",
     "df.reset_index(drop = True, inplace = True) # Resetting index\n",
-    "df = shuffle(df)\n",
+    "\n",
     "\n",
     "df = df[0:10000]"
    ]
