--- a/3334/Assignement#2/RajanGhimire.ipynb
+++ b/3334/Assignement#2/RajanGhimire.ipynb
@@ -546,10 +546,47 @@
     "movie_getter = MovieScraper(api_key=\"1b37fdfd40bfc02f3e734a5a77f5599d\")\n",
     "\n",
     "# get the latest movies that are relased before today's date \n",
-    "movies = movie_getter(company_name=\"Warner Bros.\", get_released_only=True)\n",
+    "movies = movie_getter(company_name=\"Warner Bros.\", get_released_only=False)\n",
     "\n",
     "# sort the movies based on the rating \n",
     "movies_sorted = sort_movies_by_rating(movies_list=movies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Movie: Furiosa: A Mad Max Saga\n",
+      "Movie: Wonka\n",
+      "Movie: Barbie\n",
+      "Movie: The Color Purple\n",
+      "Movie: Evil Dead Rise\n",
+      "Movie: Black Adam\n",
+      "Movie: Don't Worry Darling\n",
+      "Movie: Blue Beetle\n",
+      "Movie: Aquaman and the Lost Kingdom\n",
+      "Movie: The Flash\n",
+      "Movie: Magic Mike's Last Dance\n",
+      "Movie: Meg 2: The Trench\n",
+      "Movie: BC Project\n",
+      "Movie: Flowervale Street\n",
+      "Movie: Minecraft\n",
+      "Movie: Alto Knights\n",
+      "Movie: Mickey 17\n",
+      "Movie: Joker: Folie à Deux\n",
+      "Movie: Beetlejuice Beetlejuice\n",
+      "Movie: Twisters\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in movies_sorted:\n",
+    "    print(f\"Movie: {i[\"title\"]}\")"
    ]
   },
   {
