--- a/103/Activities/Activity01/activity01.ipynb
+++ b/103/Activities/Activity01/activity01.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "100.56785907"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "100.4404927375"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "0.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "97.87197312333333"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,29 +176,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.18748092"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# calculate the median of the last row\n"
+    "# calculate the median of the last row\n",
+    "np.median(dataset[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median of last 3: 99.47332349999999\n"
+     ]
+    }
+   ],
    "source": [
-    "# calculate the median of the last 3 columns\n"
+    "# calculate the median of the last 3 columns\n",
+    "last_three_column =  dataset[:,-3:]\n",
+    "print(f\"Median of last 3: {np.median(last_three_column)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculate the median of each row\n"
+    "# calculate the median of each row\n",
+    "median_by_row = [np.median(x) for x in dataset]"
    ]
   },
   {
@@ -217,20 +240,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total variance : 8\n"
+     ]
+    }
+   ],
    "source": [
-    "# calculate the variance of each column\n"
+    "# calculate the variance of each column\n",
+    "var_per_col = [np.var(x) for x in dataset.T]\n",
+    "print(f\"Total variance : {len(var_per_col)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance: 4.674691991769191\n"
+     ]
+    }
+   ],
    "source": [
-    "# calculate the variance of the intersection of the last 2 rows and first 2 columns\n"
+    "# calculate the variance of the intersection of the last 2 rows and first 2 columns\n",
+    "chunk = dataset[-2:, 0:2]\n",
+    "print(f\"Variance: {np.var(chunk)}\")"
    ]
   },
   {
@@ -248,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
