--- a/103/Activities/Activity02/activity02.ipynb
+++ b/103/Activities/Activity02/activity02.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# loading the Dataset\n",
-    "dataset = np.genfromtxt('./data/normal_distribution.csv', delimiter=',')"
+    "dataset = np.genfromtxt('data/normal_distribution.csv', delimiter=',')"
    ]
   },
   {
@@ -49,6 +49,26 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24, 9)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.shape"
    ]
   },
   {
@@ -72,42 +92,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 92.02628776,  97.10439252,  99.32066924,  97.24584816,\n",
+       "        92.9267508 ,  92.65657752, 105.7197853 , 101.23162942,\n",
+       "        93.87155456])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# indexing the second row of the dataset (2nd row)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# indexing the last element of the dataset (last row)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# indexing the first value of the second row (1st row, 1st value)\n",
-    "\n"
+    "\n",
+    "dataset[1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 94.11176915,  99.62387832, 104.51786419,  97.62787811,\n",
+       "        93.97853495,  98.75108352, 106.05042487, 100.07721494,\n",
+       "       106.89005002])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# indexing the last element of the dataset (last row)\n",
+    "\n",
+    "dataset[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92.02628776"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# indexing the first value of the second row (1st row, 1st value)\n",
+    "dataset[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 96.10020311,  94.57421727, 100.80409326, 105.02389857,\n",
+       "        98.61325194,  95.62359311,  97.99762409, 103.83852459,\n",
+       "       101.2226037 ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# indexing the last value of the second to last row (we want to use the combined access syntax here) \n",
-    "\n"
+    "dataset[-2]\n"
    ]
   },
   {
@@ -137,12 +209,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 99.14931546, 104.03852715],\n",
+       "       [ 92.02628776,  97.10439252]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# slicing an intersection of 4 elements (2x2) of the first two rows and first two columns\n",
-    "\n"
+    "\n",
+    "dataset[:2,:2]"
    ]
   },
   {
@@ -162,12 +247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([101.20862522, 100.28690912,  93.37126331, 100.79478953,\n",
+       "        96.10020311])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# selecting every second element of the fifth row \n",
-    "\n"
+    "dataset[4,::2]"
    ]
   },
   {
@@ -314,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
