--- a/2203/lecture2/lecture2.ipynb
+++ b/2203/lecture2/lecture2.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: del\n"
+     ]
+    }
+   ],
    "source": [
     "!del sample.db"
    ]
@@ -18,24 +26,29 @@
     "import sqlite3\n",
     "\n",
     "# create the connectin object \n",
-    "conn = sqlite3.connect(\"sample.db\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "conn = sqlite3.connect(\"sample.db\")\n",
+    "\n",
     "# create cursor \n",
     "cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table EMPLOYEE already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 11\u001b[0m\n\u001b[1;32m      1\u001b[0m create_table \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124m \u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124m                CREATE TABLE EMPLOYEE(\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m                FIRST_NAME CHAR(20) NOT NULL,\u001b[39m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124m                INCOME FLOAT)\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124m                \u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# execute the ddl \u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcreate_table\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m conn\u001b[38;5;241m.\u001b[39mcommit()\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# fetch all the records \u001b[39;00m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: table EMPLOYEE already exists"
+     ]
+    }
+   ],
    "source": [
     "create_table = \"\"\" \n",
     "                CREATE TABLE EMPLOYEE(\n",
@@ -48,32 +61,23 @@
     "\n",
     "# execute the ddl \n",
     "cursor.execute(create_table)\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "conn.commit()\n",
+    "\n",
+    "\n",
+    "# fetch all the records \n",
     "cursor.fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x25b61ae9c00>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the entries from the first column\n",
     "cursor.execute(\"SELECT * from EMPLOYEE\")"
@@ -113,19 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('John', 'snow', 'M', None, 50000.0)\n",
-      "('RAJAN', 'GHIMIRE', 'M', '25', 550000.0)\n",
-      "('NAJAR', 'GHIMIRE', 'M', '25', 550000.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in cursor:\n",
     "    print(x)"
@@ -140,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,20 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x25b61ae9c00>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get the entries from the first column\n",
     "cursor.execute(\"SELECT * from EMPLOYEE\")\n",
@@ -179,43 +151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('John', 'snow', 'M', None, 50000.0)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.fetchone()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('RAJAN', 'GHIMIRE', 'M', '25', 550000.0),\n",
-       " ('NAJAR', 'GHIMIRE', 'M', '25', 550000.0),\n",
-       " ('Prajwal', 'Luitel', 23, 'M', 15000000.0),\n",
-       " ('Sambridhi', 'Luitel', 23, 'F', 15000000.0)]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.fetchall()"
    ]
@@ -229,21 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('John', 'snow', 'M', None, 50000.0)\n",
-      "('RAJAN', 'GHIMIRE', 'M', '25', 550000.0)\n",
-      "('NAJAR', 'GHIMIRE', 'M', '25', 550000.0)\n",
-      "('Prajwal', 'Luitel', 24, 'M', 15000000.0)\n",
-      "('Sambridhi', 'Luitel', 23, 'F', 15000000.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql = \"\"\"UPDATE EMPLOYEE SET AGE=AGE+1 WHERE SEX='M'\"\"\"\n",
     "cursor.execute(sql)\n",
@@ -264,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,23 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('John', 'snow', 'M', None, 50000.0),\n",
-       " ('RAJAN', 'GHIMIRE', 'M', '25', 550000.0),\n",
-       " ('NAJAR', 'GHIMIRE', 'M', '25', 550000.0),\n",
-       " ('Prajwal', 'Luitel', 24, 'M', 15000000.0)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# delete record where Sambridhi\n",
     "delete_query = \"\"\"DELETE FROM Employee_UPDATED WHERE FIRST_NAME = 'Sambridhi'\"\"\"\n",
@@ -334,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
